kubernetes/base/recommendation/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: recco-canary
  labels:
    app: recommendation
    component: api
spec:
  type: ClusterIP
  selector:
    app: recommendation
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
