kubernetes/base/recommendation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recommendation
  labels:
    app: recommendation
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - recommendation.DOMAIN_PLACEHOLDER
      secretName: recommendation-tls
  rules:
    - host: recommendation.DOMAIN_PLACEHOLDER
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recommendation
                port:
                  number: 8080
